# PEMDAS

./: CMakeLists.txt  CMakePresets.json  EquationParser.sln  ProbGen.c  ProbGen.h  README.md  main.cpp  test.c
EquationParser/: Args.cs  Lexer.cs  Program.cs  TokenStream.cs  test.cs
